[gd_scene load_steps=35 format=2]

[ext_resource path="res://Textures/Player/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player/PlayerStateMachine.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player/PlayerData.tres" type="Resource" id=3]
[ext_resource path="res://Scenes/Player/IdleState.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Player/AirState.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Player/EvadeState.gd" type="Script" id=7]
[ext_resource path="res://Textures/Player/Platformer/bow_layers/001.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Player/EdgeCatchState.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Player/WalkState.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Player/RunState.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Player/Bow.gd" type="Script" id=13]
[ext_resource path="res://Scenes/Player/Crouch.gd" type="Script" id=14]
[ext_resource path="res://Scenes/Player/TakeHit.gd" type="Script" id=15]
[ext_resource path="res://Scenes/Player/WallHang.gd" type="Script" id=16]

[sub_resource type="CapsuleShape2D" id=25]
radius = 4.0
height = 12.0

[sub_resource type="CapsuleShape2D" id=28]
radius = 5.0
height = 12.0

[sub_resource type="Animation" id=26]
resource_name = "Bow Fire"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../Bow")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.49 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ null ],
"method": "fire_arrow"
}, {
"args": [  ],
"method": "exit"
} ]
}

[sub_resource type="Animation" id=27]
resource_name = "Bow Ready"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Catch Edge"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 120, 121, 122, 123 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Climb from Ledge"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 130, 131, 132, 133, 134, 135 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("PlayerStateMachine/EdgeCatch")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ null, false ],
"method": "reposition_for_climb"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:current_animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.59 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ "Idle" ]
}

[sub_resource type="Animation" id=9]
resource_name = "Crouch"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2, 6 ), Vector2( -2, 6 ), Vector2( -2, 6 ), Vector2( -2, 6 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Fall"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 100, 101, 102, 103 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2, 2 ), Vector2( -2, 2 ), Vector2( -2, 2 ), Vector2( -2, 2 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Fall to Idle Transition"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 110, 111, 112, 113 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 140, 141, 142, 143, 144, 145 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2, 2 ), Vector2( -2, 2 ), Vector2( -2, 1 ), Vector2( -2, 1 ), Vector2( -2, 1 ), Vector2( -2, 2 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "Jump"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 80, 81, 82, 83 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2, 0 ), Vector2( -2, 0 ), Vector2( -2, 0 ), Vector2( -2, 0 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "Jump to Fall Transition"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 90, 91, 92, 93 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2, 2 ), Vector2( -4, 1 ), Vector2( -3, 2 ), Vector2( -4, 3 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Ladder Climb"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 70, 71, 72, 73, 74, 75 ]
}

[sub_resource type="Animation" id=20]
resource_name = "Roll"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=21]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 160, 161, 162, 163, 164, 165 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2, 1 ), Vector2( -2, 2 ), Vector2( -2, 2 ), Vector2( -2, 1 ), Vector2( -2, 2 ), Vector2( -2, 2 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "Run Stop"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 170, 171, 172, 173 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 3 ), Vector2( -1, 4 ), Vector2( -2, 3 ), Vector2( -2, 2 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "Slide"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53 ]
}

[sub_resource type="Animation" id=24]
resource_name = "Walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 150, 151, 152, 153, 154, 155 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2, 2 ), Vector2( -2, 2 ), Vector2( -2, 1 ), Vector2( -2, 2 ), Vector2( -2, 2 ), Vector2( -2, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 13
script = ExtResource( 9 )
stats = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 25 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 10
vframes = 22
frame = 155

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 28 )

[node name="Pivot" type="Position2D" parent="."]
position = Vector2( -2, 1 )

[node name="BowSprite" type="Sprite" parent="Pivot"]
texture = ExtResource( 8 )
hframes = 5
vframes = 2
frame = 5

[node name="ArrowSpawn" type="Position2D" parent="Pivot"]
position = Vector2( 6, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot"]
"anims/Bow Fire" = SubResource( 26 )
"anims/Bow Ready" = SubResource( 27 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Catch Edge" = SubResource( 7 )
"anims/Climb from Ledge" = SubResource( 8 )
anims/Crouch = SubResource( 9 )
anims/Fall = SubResource( 13 )
"anims/Fall to Idle Transition" = SubResource( 14 )
anims/Idle = SubResource( 16 )
anims/Jump = SubResource( 17 )
"anims/Jump to Fall Transition" = SubResource( 18 )
"anims/Ladder Climb" = SubResource( 19 )
anims/Roll = SubResource( 20 )
anims/Run = SubResource( 21 )
"anims/Run Stop" = SubResource( 22 )
anims/Slide = SubResource( 23 )
anims/Walk = SubResource( 24 )

[node name="Bow" type="Node" parent="."]
script = ExtResource( 13 )

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 4 )

[node name="Walk" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 11 )

[node name="Run" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 12 )

[node name="Air" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 6 )

[node name="Crouch" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 14 )

[node name="Evade" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 7 )

[node name="EdgeCatch" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 10 )

[node name="WallHang" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 16 )

[node name="TakeHit" type="Node" parent="PlayerStateMachine"]
script = ExtResource( 15 )

[node name="StateLockedTimer" type="Timer" parent="."]
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WallJumpResetTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="WallFinder" type="RayCast2D" parent="."]
cast_to = Vector2( 5, 0 )

[node name="WallFinderTop" type="RayCast2D" parent="."]
position = Vector2( 0, -10 )
cast_to = Vector2( 5, 0 )

[node name="GroundFinder" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 3 )

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="WallJumpResetTimer" to="PlayerStateMachine/WallHang" method="_on_WallJumpResetTimer_timeout"]

[editable path="Hurtbox"]
